// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render default button 1`] = `
<DocumentFragment>
  <button
    class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 edRCi"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button should render primary button 1`] = `
<DocumentFragment>
  <button
    class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 edRCi"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button should render secondary button 1`] = `
<DocumentFragment>
  <button
    class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 edRCi"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`DisabledButton should render disabled button with tooltip 1`] = `
<DocumentFragment>
  <span
    class="ant-tooltip-open"
    style="cursor: not-allowed;"
  >
    <button
      class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 edRCi"
      disabled=""
      style="pointer-events: none;"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </span>
</DocumentFragment>
`;

exports[`DisabledButton should render disabled button without 1`] = `
<DocumentFragment>
  <span
    style="cursor: not-allowed;"
  >
    <button
      class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 edRCi"
      disabled=""
      style="pointer-events: none;"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </span>
</DocumentFragment>
`;
